fix overflowing text

--- a/main.css
+++ b/main.css
@@ -47,7 +47,7 @@ html {
   
   .todo-item {
     margin-bottom: 10px;
-    width: 100%;
+    max-width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -58,6 +58,9 @@ html {
     margin-left: 10px;
     margin-right: 10px;
     font-size: 22px;
+    max-width: 400px;
+    overflow-wrap: break-word;
+    line-height: 1.2;
   }
   
   .done span {
@@ -69,8 +72,8 @@ html {
   }
   
   .tick {
-    width: 30px;
-    height: 30px;
+    min-width: 30px;
+    min-height: 30px;
     border: 3px solid #333;
     border-radius: 50%;
     display: inline-flex;
@@ -135,5 +138,5 @@ html {
   }
 
   .todo-list:empty + .empty-state {
-    display: flex;
+    display: flex ;
   }
